# ansible-role-logindefs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml
.github/workflows/: dev-push-smoke.yml  main-full-gate.yml
defaults/: main.yml
meta/: argument_specs.yml  main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/dev/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: main.yml
