[project]
name = "logindefs"
version = "0.0.0"
description = "Conservatively manage /etc/login.defs."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["login", "logindefs", "shadow", "user", "useradd", "userdel", "usermod"]
repository = "https://github.com/jomrr/ansible-role-logindefs"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
branch = "main"
commit_message = "build(release): version {version}"
major_on_zero = true
upload_to_pypi = false
upload_to_vcs_release = true
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version",
]

[tool.tox]
envlist = ["lint"]

[tool.tox.env.lint]
description = "Lint code"
skip_install = true
deps = ["ansible-lint"]
commands = [["ansible-lint", "--offline"]]
